Viewmodel and cells updated

--- a/MovieApp/Scenes/Main/CollectionViewCells/ShowcaseCollectionViewCell.xib
+++ b/MovieApp/Scenes/Main/CollectionViewCells/ShowcaseCollectionViewCell.xib
@@ -30,6 +30,9 @@
                     </collectionView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dId-kD-L34">
                         <rect key="frame" x="20" y="10" width="324" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="24" id="ekT-6l-B44"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
