--- a/MovieApp/Scenes/Main/CollectionViewCells/DetailCollectionViewCell/DetailCollectionViewCell.xib
+++ b/MovieApp/Scenes/Main/CollectionViewCells/DetailCollectionViewCell/DetailCollectionViewCell.xib
@@ -24,7 +24,7 @@
                             <constraint firstAttribute="width" constant="185" id="kck-Qm-mng"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tcN-v2-8pj">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tcN-v2-8pj">
                         <rect key="frame" x="5" y="285" width="175" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
